--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>漫威</title>
+    <meta charset="utf-8">
+    <title>Video.js 7.0</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link href="./lib/video7.1.0/css/video-js.min.css" rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="m">
+        <div id="playBtn" class="play-btn">播放</div>
+        <video id="my-video" class="video-js" controls preload="auto">
+            <source src="./video//marvel.mp4" type="video/mp4">
+        </video>
+    </div>
+    <script src="./lib/video7.1.0/js/video.min.js"></script>
+    <script src="./js/jq3.1.0.js"></script>
+    <script type="text/javascript">
+        var docHeight = document.documentElement.clientHeight,
+            docWidth = document.documentElement.offsetWidth,
+            videoItem = document.getElementById("my-video"),
+            playBtn = $("#playBtn");
+        console.log($("#playBtn"));
+        var player = videojs('my-video', {
+            muted: false,
+            controls: true / false,
+            height: docHeight,
+            width: docWidth,
+            loop: false,
+            controls: false,
+            autoplay: false,
+            // 更多配置.....
+        });
+
+        videoItem.addEventListener("ended", function () {
+            console.log(1);
+        })
+        playBtn.on("click", function () {
+            console.log(1);
+            videoItem.play();
+        })
+    </script>
+
 </body>
+
 </html>
