--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="m">
+    <div class="video-wrap">
         <div id="playBtn" class="play-btn">播放</div>
         <video id="my-video" class="video-js" controls preload="auto">
             <source src="./video//marvel.mp4" type="video/mp4">
