主页引入css样式

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Video.js 7.0</title>
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link href="./lib/video7.1.0/css/video-js.min.css" rel="stylesheet">
 </head>
 
