--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </video>
     </div>
     <div id="mainContainer" class="main-container">
-        <header class="header">
+        <header class="header" id="header">
             <div class="header-upper">
                 <svg class="logo" xmlns="http://www.w3.org/2000/svg" width="214" viewBox="0 0 214 86">
                     <g fill="none" fill-rule="evenodd">
