--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./lib/animate/animate.css">
+    <link rel="stylesheet" href="./iconfont/iconfont.css">
     <link href="./lib/video7.1.0/css/video-js.min.css" rel="stylesheet">
 </head>
 
@@ -47,20 +48,110 @@
                         <a href="javascript:;">movies</a>
                     </li>
                     <li>
+                        <a href="javascript:;">swot</a>
+                    </li>
+                    <li>
                         <a href="javascript:;">more</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <div id="mainWrap" class="animated">
-            <main class="mian-wrap" style="height:1800px;">
-                <article>
-                    <div class="banner" id="swiperSwrap">
-                        21321
-                    </div>
-                </article>
-                <aside></aside>
-            </main>
+            <div class="banner" id="swiperSwrap">
+                <div class="overlay"></div>
+                <div class="banner-title">
+                    <span> welcome</span>
+                    <span>
+                        This website is used to introduce Marvel
+                    </span>
+                </div>
+            </div>
+            <div class="bg-wrap">
+                <main class="mian-wrap">
+                    <section class="about">
+                        <div class="title">title: about</div>
+                        <div class="content">
+                            <div class="sub-title">{about marvel}</div>
+                            <p>
+                                Marvel Comics, it is a famous American comic company. It was foundedin 1939 and
+                                officially named Marvel in 1961. It was formerly translated as " Marvel Comics" and
+                                used to be named " Time Comics" and " Atlas Comics"
+                            </p>
+                            <div class="about-item-wrap">
+                                <div class="about-item">
+                                    <span class="about-icon-wrap">
+                                        <span class="about-icon-inner">
+                                            <i class="iconfont icon-ai-book"></i>
+                                        </span>
+                                    </span>
+                                    <div class="sub-title">comics</div>
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                                <div class="about-item">
+                                    <span class="about-icon-wrap">
+                                        <span class="about-icon-inner">
+                                            <i class="iconfont icon-dianying"></i>
+                                        </span>
+                                    </span>
+                                    <div class="sub-title">movie</div>
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                                <div class="about-item">
+                                    <span class="about-icon-wrap">
+                                        <span class="about-icon-inner">
+                                            <i class="iconfont icon-youxi"></i>
+                                        </span>
+                                    </span>
+                                    <div class="sub-title">games</div>
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="more">
+                            <a href="javascript:;">more</a>
+                        </div>
+                    </section>
+                    <section class="gallery">
+                        <div class="title">title: gallery</div>
+                        <div class="content"></div>
+                        <div class="more">
+                            <a href="javascript:;">more</a>
+                        </div>
+                    </section>
+                    <section class="timeline">
+                        <div class="title">title: movie timeline</div>
+                        <div class="content">
+                            <div class="timeline-block"></div>
+                            <div class="timeline-block"></div>
+                            <div class="timeline-block"></div>
+                            <div class="timeline-block"></div>
+                            <div class="timeline-block"></div>
+                        </div>
+                        <div class="more">
+                            <a href="javascript:;">more</a>
+                        </div>
+                    </section>
+                    <section class="team">
+                        <div class="title">title: website makers</div>
+                        <div class="content"></div>
+                        <div class="more">
+                            <a href="javascript:;">more</a>
+                        </div>
+                    </section>
+                </main>
+            </div>
         </div>
         <footer class="footer">
             制作人: ****、****、*****
