--- a/index.html
+++ b/index.html
@@ -36,22 +36,20 @@
             <nav>
                 <ul class="nav">
                     <li>
-                        <a href="javascript:;">explore</a>
+                        <a href="./index.html">explore</a>
                     </li>
                     <li>
                         <a href="./history/index.html">history</a>
                     </li>
-                    <li>
-                        <a href="javascript:;">team</a>
-                    </li>
+
                     <li>
                         <a href="./movies.html">movies</a>
                     </li>
                     <li>
-                        <a href="javascript:;">swot</a>
+                        <a href="./swot.html">swot</a>
                     </li>
                     <li>
-                        <a href="javascript:;">more</a>
+                        <a href="./more.html">more</a>
                     </li>
                 </ul>
             </nav>
