--- a/movies.html
+++ b/movies.html
@@ -28,19 +28,17 @@
                         <a href="./index.html">explore</a>
                     </li>
                     <li>
-                        <a href="javascript:;">team</a>
+                        <a href="./history/index.html">history</a>
                     </li>
-                    <li>
-                        <a href="javascript:;">history</a>
-                    </li>
+
                     <li>
                         <a href="./movies.html">movies</a>
                     </li>
                     <li>
-                        <a href="javascript:;">swot</a>
+                        <a href="./swot.html">swot</a>
                     </li>
                     <li>
-                        <a href="javascript:;">more</a>
+                        <a href="./more.html">more</a>
                     </li>
                 </ul>
             </nav>
