--- a/swot.html
+++ b/swot.html
@@ -39,9 +39,11 @@
                         <a href="./index.html">explore</a>
                     </li>
                     <li>
+                        <a href="./ourgroup.html">ourgroup</a>
+                    </li>
+                    <li>
                         <a href="./history/index.html">history</a>
                     </li>
-
                     <li>
                         <a href="./movies.html">movies</a>
                     </li>
